logs/pyalgdat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyAlgDat-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/depth_first_graph_test.py'...
***   File "./lib/python3.5/site-packages/examples/depth_first_graph_test.py", line 68
    print str("Depth First traversal: ") + str(VISITOR.get_visited())
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/dijkstra_test.py'...
***   File "./lib/python3.5/site-packages/examples/dijkstra_test.py", line 96
    print "Edges in Spanning Tree: " + str(SPANNING_TREE_EDGES)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/kruskal_test.py'...
***   File "./lib/python3.5/site-packages/examples/kruskal_test.py", line 69
    print MST
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/prim_test.py'...
***   File "./lib/python3.5/site-packages/examples/prim_test.py", line 69
    print MST
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/shortest_path_test.py'...
***   File "./lib/python3.5/site-packages/examples/shortest_path_test.py", line 88
    print PATH
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_alg_dat'...
Compiling './lib/python3.5/site-packages/py_alg_dat/max_heap.py'...
***   File "./lib/python3.5/site-packages/py_alg_dat/max_heap.py", line 418
    print "New key is smaller than current key!"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/py_alg_dat/min_heap.py'...
***   File "./lib/python3.5/site-packages/py_alg_dat/min_heap.py", line 325
    print "New key is smaller than current key!"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/py_alg_dat/vertex_visitor.py'...
***   File "./lib/python3.5/site-packages/py_alg_dat/vertex_visitor.py", line 78
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testsuite'...
Compiling './lib/python3.5/site-packages/testsuite/test_directed_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_directed_graph.py", line 259
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testsuite/test_directed_un_weighted_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_directed_un_weighted_graph.py", line 221
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testsuite/test_directed_weighted_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_directed_weighted_graph.py", line 221
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testsuite/test_un_directed_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_un_directed_graph.py", line 198
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testsuite/test_un_directed_un_weighted_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_un_directed_un_weighted_graph.py", line 252
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testsuite/test_un_directed_weighted_graph.py'...
***   File "./lib/python3.5/site-packages/testsuite/test_un_directed_weighted_graph.py", line 243
    print "Exception caught: %s" % str(KeyError)
                               ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
